--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>Welcome to my full stack development journey!</h1>
+<h1>Welcome to my full-stack development journey!</h1>
 <h2>My Learning Path</h2>
 
 <h3>Introduction to HTML</h3>
@@ -12,11 +12,13 @@
 
 <h3>An image of Campfire Mountain in Minecraft</h3>
 
-<img src = "https://assets.badlion.net/blog/minecraft-backgrounds/campfire-mountain.webp" 
+<img src = "https://img.freepik.com/free-photo/crystal-balls-fruits-still-life_23-2150439083.jpg?t=st=1771423811~exp=1771427411~hmac=3a89246f59e0b8e7ddeed890341cf0307b9e0b1573e93fc9089605e7995322cf" 
 alt = "Campfire Mountain" width = "500px">
 <p></p>
-<h3><a href = "https://www.badlion.net/minecraft-blog/minecraft-background-images-2025" target="_blank">
-    Click here to find more Minecraft backgrounds!</a></h3>
+<h3><a href = "https://www.freepik.com/photos" target="_blank">
+    Click here to find more no copyright images!</a></h3>
 
 <p>You can right click on the image to save it!</p>
 <h2>Thank you for visiting my webpage!</h2>
+
+<!--This is my learning journey to become a full-stack developer!--> 
