--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <h3>Introduction to JavaScript</h3>
 <p>JavaScript adds interactivity to a webpage</p>
 
-<h3>An image of Campfire Mountain in Minecraft</h3>
+<h3>An image of Crystal Balls and Fruits Still Life</h3>
 
 <img src = "https://img.freepik.com/free-photo/crystal-balls-fruits-still-life_23-2150439083.jpg?t=st=1771423811~exp=1771427411~hmac=3a89246f59e0b8e7ddeed890341cf0307b9e0b1573e93fc9089605e7995322cf" 
-alt = "Campfire Mountain" width = "500px">
+alt = "Crystal Balls and Fruits Still Life" width = "500px">
+
 <p></p>
 <h3><a href = "https://www.freepik.com/photos" target="_blank">
     Click here to find more no copyright images!</a></h3>
