--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@ alt = "Crystal Balls and Fruits Still Life" width = "500px">
 <h3><a href = "https://www.freepik.com/photos" target="_blank">
     Click here to find more no copyright images!</a></h3>
 
-<p>You can right click on the image to save it!</p>
+<p>You can right-click on the image to save it!</p>
 <h2>Thank you for visiting my webpage!</h2>
 
 <!--This is my learning journey to become a full-stack developer!--> 
+
